fixe footer::before separator visibility

--- a/style.css
+++ b/style.css
@@ -70,9 +70,6 @@ body {
 /* footer */
 #footer {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 1.6rem;
 }
 #footer p {
